; ModuleID = '/home/carl/AnghaBench/RetroArch/audio/drivers/extr_alsathread.c_alsa_thread_device_list_free.c'
source_filename = "/home/carl/AnghaBench/RetroArch/audio/drivers/extr_alsathread.c_alsa_thread_device_list_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.string_list = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*)* @alsa_thread_device_list_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @alsa_thread_device_list_free(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.string_list*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.string_list*
  store %struct.string_list* %7, %struct.string_list** %5, align 8
  %8 = load %struct.string_list*, %struct.string_list** %5, align 8
  %9 = icmp ne %struct.string_list* %8, null
  br i1 %9, label %11, label %10

10:                                               ; preds = %2
  br label %14

11:                                               ; preds = %2
  %12 = load %struct.string_list*, %struct.string_list** %5, align 8
  %13 = call i32 @string_list_free(%struct.string_list* %12)
  br label %14

14:                                               ; preds = %11, %10
  ret void
}

declare dso_local i32 @string_list_free(%struct.string_list*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
